web-infras/parser/tests/fixtures/esprima/ES6/arrow-function/arrow-with-multiple-rest/output.txt
[SyntaxError]: Unexpected trailing comma after rest element. (1,8)
1|(...a, ...b) => 0
 |      ^
